--- a/analysis 2/Etude de la biométrie humaine.Rmd
+++ b/analysis 2/Etude de la biométrie humaine.Rmd
@@ -47,35 +47,37 @@ chart(biometry_2018, masse ~ genre %col=% genre) + geom_boxplot(na.rm = TRUE)
  On observe que les hommes ont une masse plus importante que celle des femmes mais cette différence est-elle significative ou peut-elle être juste liée au hasard de l’échantillonnage ?
  Pour y répondre, nous devons élaborer un test d’hypothèse qui va confronter les hypothèses suivantes (en se basant sur les moyennes) :
  
-```{r test}
-H_{0} : \overline{ masse_{f} } = \overline{ masse_{m} }
-```
-
-
-
-
-
-```{r Student test pour la masse et le genre }
+```{r test de student}
 t.test(data = biometry_2018, masse ~ genre,
   alternative = "two.sided", conf.level = 0.95, var.equal = TRUE)
 ```
-H_{0} : \overline{ masse_{f} } = \overline{ masse_{m} }
 
-H_{1}: \overline{ masse_{m} } \neq \overline{ masse_{m} }
-
-npus ne rejettons pas h0
+On doit rejeter H0 car la p-value est plus inférieure que le seuil alpha
 
 
-```{r Distribution dans les différents groupes}
-chart(data = biometry_2018, masse ~ genre) + # Je réalise un graphique 
-  geom_violin(na.rm = TRUE) + # Je réalise un graphique en violon
-  geom_jitter(width = 0.05, alpha = 0.5) + # J'ajoute les points sur le graphique 
-  stat_summary(geom = "point", fun.y = "mean", color = "red", size = 4) # J'ajoute la moyenne en rouge
-
+```{r bartlett test pour biometry_2018}
+bartlett.test(data = biometry_2018, masse ~ genre)
 
 ```
 
+Nousrejettons H0 car il n'y a pas d'homoscédasticité.
 
+```{r bartlett graphique violin}
+chart(data = biometry_2018, masse ~ genre) +
+  geom_violin() +
+  geom_jitter(width = 0.05, alpha = 0.5) +
+  geom_point(data = group_by(biometry_2018, genre) %>.%
+    summarise(., means = mean(masse, na.rm = TRUE)),
+    f_aes(means ~ genre), size = 3, col = "red")
 
+```
 
+On voit avec le point rouge dans les formes, la moyenne.
+
+```{r anova de biometry_2018}
+anova(anova. <- lm(data = biometry_2018, masse ~ genre))
+
+```
+
+La valeur de P est très faible par rapport au seuil alpha donc nous rejetons H0. Nous pouvons maintenant calculer et visionner la distribution les résidus.
 
